********** SPL 1.6 Release Candidate **********
===== Build 0088 2019/05/06 =====

* Added some docstrings

********** SPL 1.6 Beta 12 **********
===== Build 0087 2019/05/06 =====

* New built-in function:
    * id()
* Bug fixes:
    * instanceof not work for python types
    * string() not work for classes with __str__ not defined
    * memory_view() recurse infinitely to circular references

********** SPL 1.6 Beta 11 **********
===== Build 0086 2019/05/05 =====

* Added the error traceback of eval()

********** SPL 1.6 Beta 10 **********
===== Build 0085 2019/05/04 =====

* SGL updates
* IDLE Updates
* Error traceback now printed to system.stderr

********** SPL 1.6 Beta 9 **********
===== Build 0084 2019/05/04 =====

* Change the NativeType 'List' to 'Array'
* Added new native function 'array()'
* Implemented 'List' in SPL, in lang.sp
* Functional updates:
    * SPL object __iter__ can now return a native iterable object
    * Hidden function __unpack__
* New native function:
    * get_env()
* New library:
    * util.sp:
        * memory_view()
* New SGL widget:
    * TreeView
* Bug fixes:
    * Access of Class might be blocked by constructor in class

********** SPL 1.6 Beta 8 **********
===== Build 0083 2019/05/03 =====

* Optimized function call
* Updated native function help():
    * Changed the output of 'help' to system.stdout
    * Added the help for module

********** SPL 1.6 Beta 7 **********
===== Build 0082 2019/05/02 =====

* Structural optimization:
    * Moved all spl *.py files into /bin
    * Added a new function checking the spl path
* Updated idle.sp

********** SPL 1.6 Beta 6 **********
===== Build 0081 2019/05/02 =====

* Updated native functions:
    * input()
* spl lib updates:
    * io.sp: added spl based IOException
    * sgl.sp: Menus
* Bug fixes:
    * try-catch block could not catch Exception from modules

********** SPL 1.6 Beta 5 **********
===== Build 0080 2019/05/02 =====

* Change in system: