@@ -56,6 +56,42 @@ class MemoryViewer {
     }
 }
 
+/*
+ * A type of dynamic building strings.
+ */
+class StringBuilder {
+
+    var lst;
+    var len = 0;
+
+    function StringBuilder() {
+        lst = [];
+    }
+
+    function append(s) {
+        var v = string(s);
+        len += v.length();
+        lst.append(v);
+        return this;
+    }
+
+    function to_string() {
+        return natives.str_join("", lst.to_array());
+    }
+
+    function length() {
+        return len;
+    }
+
+    function substring(from, to=null) {
+        return to_string().substring(from, to);
+    }
+
+    function __str__() {
+        return to_string();
+    }
+}
+
 function memory_view(env) {
     var mv = new MemoryViewer(env);
     mv.show();
