@@ -1,3 +1,15 @@
+********** SPL 1.6 Release Candidate 2 **********
+===== Build 0089 2019/05/07 =====
+
+* Moved class 'StringBuilder' from string_builder.sp to util.sp
+* Added new library json.sp
+* Functional updates:
+    * Hidden function __kw_unpack__
+* Bug fixes:
+    * StringBuilder.to_string() generates error
+    * Re-declare warning shows at wrong time
+    * return {...} misidentified as a block statement
+
 ********** SPL 1.6 Release Candidate **********
 ===== Build 0088 2019/05/06 =====
 
